# solana-fellowship

./: .gitignore  README.md
blog/: week-02.md
blogs/: week-01.md  week-02.md  week-03.md  week-04.md  week-05.md  week-06.md  week-07.md
exercises/21-voting/: Cargo.toml  README.md
exercises/21-voting/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
exercises/21-voting/src/state/: ballot.rs  voter.rs
exercises/21-voting/tests/: integration.rs
exercises/31-bi-directional-payment-channel/: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
exercises/41-nft-marketplace/: README.md
exercises/51-personal-crypto-staking/: Anchor.toml  README.md  package.json  tsconfig.json
exercises/61-shared-wallet/: Anchor.toml  README.md  package.json
programs/scripts/: update-solana-dependencies.sh
quests/11-deploy-on-solana/: Cargo.toml  README.md
quests/11-deploy-on-solana/src/: lib.rs
quests/12-create-crypto-using-solana-cli/: README.md
quests/21-airdrop/: README.md  package.json
quests/22-roulette/: .gitignore  README.md  package-lock.json  treasury_wallet.txt
quests/31-crowdfunding/: Cargo.toml  README.md
quests/31-crowdfunding-1/: README.md
quests/32-crowdfunding-2/: README.md  index.js  package-lock.json  package.json
quests/33-calculator/: Anchor.toml  README.md  package.json  tsconfig.json
quests/41-create-and-burn-nfts/: README.md  (+1 more)
templates/program/: Cargo.toml
templates/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
templates/program/tests/: integration.rs
(+134 files in other folders)
