[package]
name = "voting"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
solana-program = "1.9.6"
solana-validator = { version = "1.9.6", optional = true }
borsh = "0.9.3"
num-traits = "0.2.14"
num-derive = "0.3.3"
thiserror = "1.0.30"

[features]
no-entrypoint = []
test-bpf = ["solana-validator"]

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "1.9.6"
solana-sdk = "1.9.6"

[lib]
crate-type = ["cdylib", "lib"]
